    conflict.
  * INSTALL: one can now specify a mixture of installables:
    * deb files
    * url files
    * normal packages
    Previously, only one of these types could be installed at a time
  * make bash completer also complete lower-case COMMANDS;
    patch by "Reuben Thomas" <rrt@sc3d.org>
  * Reinstate --simulate option, but this only where it makes sense (i.e. where
    external processes are called).
  * LOCALUPGRADE:
    - [ole] wajig LOCALUPGRADE
    - [new] wajig UPGRADE --local 
  * LOCALDISTUPGRADE:
    - [ole] wajig LOCALDISTUPGRADE
    - [new] wajig DISTUPGRADE --local

 -- Tshepang Lekhonkhobe <tshepang@gmail.com>  Mon, 26 Mar 2012 23:13:58 +0200

wajig (2.3) unstable; urgency=low

  NEW
  * TODO: new command that reads package TODO files

  UI CHANGES
  * Optional arguments should be available only to COMMANDS that use them:
    - [ole] wajig --verbose install <package>
    - [new] wajig install --verbose <package>
  * FILEINSTALL: removed in favor of INSTALL option, -f|--fileinput:
    - [ole] wajig FILEINSTALL <filename>
    - [new] wajig INSTALL --fileinput <filenames and/or packages>
    Note that with this new option, one can specify multiple files and
    packages on the command line.
  * FILEREMOVE: applies to REMOVE as FILEINSTALL applies to INSTALL (see above)
  * FILEDOWNLOAD: applies to DOWNLOAD as... (see above)
  * PURGE: for sake of consistency, give this -f|--fileinput option too
  * REMOVE, PURGE: add --noauth option, to avoid cases where a package would
    be downloaded when there's an unauthenticated version available; this
    happens in a case where removing/purging a package leaves a void
    where APT want to be smart/convenient, and install a replacement.
  * Improve usability by limiting verbosity to either True or False.
  * Rename LISTRECOMMENDED --> RECOMMENDED
  * Remove the sanitation of wajig COMMANS, e.g. where 'LISTcommands',
    'list-commands', and 'li-st_COMMA-nds' would be translated to